# rs-sudoku

./: Cargo.toml  README.md  flake.nix
benches/: iter_comb_compare.rs  iter_compare.rs  my_benchmark.rs  parse_solve.rs
src/: box_line.rs  candidate_set.rs  error.rs  examples.rs  fast_index.rs  fast_index_data.rs  hidden_singles.rs  index.rs  index_helpers.rs  lib.rs  parse.rs  pointing_pairs.rs  position.rs  remove_candidates.rs  remove_mask.rs  slow_index.rs  solve.rs  subset.rs  sudoku.rs
