[package]
name = "rs_sudoku"
version = "0.1.0"
authors = ["Elliott Clark <elliott.neil.clark@gmail.com>"]
edition = "2018"

[dependencies]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "parse_solve"
harness = false

[[bench]]
name = "iter_compare"
harness = false

[[bench]]
name = "iter_comb_compare"
harness = false

[profile.release]
debug = true
lto = true